k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server 
    spec:
      restartPolicy: Always
      volumes:
        - name: server-storage
          persistentVolumeClaim:
            claimName: files-persistent-volume-claim
      containers: 
        - name: server 
          image: shol/music-school-server 
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: server-storage 
              mountPath: /app/uploads
