k8s/mongo-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service 
spec:
  type: ClusterIP 
  selector:
    component: mongo
  ports: 
    - port: 27017
      targetPort: 27017
